feat: v1 도메인 조회 개발